Fix some alignments on header logo on big screens

--- a/static/css/header.scss
+++ b/static/css/header.scss
@@ -4,10 +4,8 @@ header {
   height: 100px;
   padding: 30px;
   background: white;
-  top: 0;
-  left: 0;
-  right: 0;
   box-sizing: border-box;
+  display: flex;
 
   @include medium-screen {
     padding: 0 30px 0 0;
@@ -20,6 +18,7 @@ header {
   .header-container {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 
     @include medium-small-screen {
       display: flex;
